@@ -2363,9 +2363,10 @@ ospf_read (struct thread *thread)
     {
       if ((oi = ospf_associate_packet_vl (ospf, ifp, iph, ospfh)) == NULL)
         {
-          zlog_debug ("Packet from [%s] received on link %s"
-                     " but no ospf_interface",
-                     inet_ntoa (iph->ip_src), ifp->name);
+          if (IS_DEBUG_OSPF_EVENT)
+            zlog_debug ("Packet from [%s] received on link %s"
+                        " but no ospf_interface",
+                        inet_ntoa (iph->ip_src), ifp->name);
           return 0;
         }
     }
